# ecgi_tools

./: .gitignore  README.md  setup.cfg
ecgi_tools/: __init__.py  inverse.py  modelling.py  tunning.py  utils.py
