[metadata]
name = ecgi_tools
version = 0.0.1
author = Santiago F. Caracciolo
author_email = scaracciolo@conicet.gov.ar
description = Some basics tools to work in ECGI (Electrocardiographic Imaging).
url = https://github.com/sfcaracciolo/ecgi_tools.git

[options]
packages = find:
install_requires =
   scipy
   numba
   meshio
   bempp-cl @ git+https://github.com/bempp/bempp-cl.git